--- a/tests/test_cases/2019/commands/7E0.0131.yaml
+++ b/tests/test_cases/2019/commands/7E0.0131.yaml
@@ -8,3 +8,6 @@ test_cases:
 - response: 7E80441310DF8
   expected_values:
     CLR_DIST: 3576
+- response: 7E80441310E04
+  expected_values:
+    CLR_DIST: 3588
