--- a/tests/test_cases/2024/commands/700.221059.yaml
+++ b/tests/test_cases/2024/commands/700.221059.yaml
@@ -9,12 +9,12 @@ test_cases:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
     708100A621059285129
-    7082152000000000000
+    7082151000000000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
-    708100A621059305928
-    708215102CF00000000
+    708100A6210592E5728
+    708215101CF00000000
   expected_values:
     TOYOTA_ACCEL_PEDAL: 0
 - response: |-
@@ -23,7 +23,12 @@ test_cases:
   expected_values:
     TOYOTA_ACCEL_PEDAL: 9
 - response: |-
-    708100A621059567F29
-    708215117D100000000
+    708100A621059497229
+    7082152107500000000
   expected_values:
-    TOYOTA_ACCEL_PEDAL: 19.56338
+    TOYOTA_ACCEL_PEDAL: 10.40845
+- response: |-
+    708100A621059699328
+    708215122E100000000
+  expected_values:
+    TOYOTA_ACCEL_PEDAL: 32.94366
