--- a/tests/test_cases/2014/commands/7E0.0131.yaml
+++ b/tests/test_cases/2014/commands/7E0.0131.yaml
@@ -5,21 +5,9 @@ test_cases:
 - response: 7E804413100A4
   expected_values:
     CLR_DIST: 164
-- response: 7E804413100A5
+- response: 7E804413100B9
   expected_values:
-    CLR_DIST: 165
-- response: 7E804413100AA
+    CLR_DIST: 185
+- response: '7E80441310127'
   expected_values:
-    CLR_DIST: 170
-- response: 7E804413100AB
-  expected_values:
-    CLR_DIST: 171
-- response: 7E804413100AC
-  expected_values:
-    CLR_DIST: 172
-- response: 7E804413100B0
-  expected_values:
-    CLR_DIST: 176
-- response: 7E804413100B6
-  expected_values:
-    CLR_DIST: 182
+    CLR_DIST: 295
