--- a/tests/test_cases/2024/commands/701.709.220103.yaml
+++ b/tests/test_cases/2024/commands/701.709.220103.yaml
@@ -5,6 +5,9 @@ test_cases:
 - response: 7090762010302003CDB
   expected_values:
     TOYOTA_ODO_V3: 15579
-- response: 7090762010302003CEA
+- response: 7090762010302003CFF
   expected_values:
-    TOYOTA_ODO_V3: 15594
+    TOYOTA_ODO_V3: 15615
+- response: 7090762010302003D01
+  expected_values:
+    TOYOTA_ODO_V3: 15617
