Updated command responses

--- a/tests/test_cases/2014/commands/7E0.7E8.2182.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2182.yaml
@@ -22,11 +22,11 @@ test_cases:
   expected_values:
     TOYOTA_ATF_PAN_T: 34.375
     TOYOTA_ATF_TQC_T: 46.875
+- response: 7E8066182636067C0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 59.375
+    TOYOTA_ATF_TQC_T: 63.75
 - response: '7E806618268606680'
   expected_values:
     TOYOTA_ATF_PAN_T: 64.375
     TOYOTA_ATF_TQC_T: 62.5
-- response: '7E806618268606720'
-  expected_values:
-    TOYOTA_ATF_PAN_T: 64.375
-    TOYOTA_ATF_TQC_T: 63.125
