--- a/tests/test_cases/2014/commands/7E0.7E8.2185.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2185.yaml
@@ -22,6 +22,10 @@ test_cases:
   expected_values:
     TOYOTA_GEAR: 5
     TOYOTA_GEAR_LOCKUP: 0
+- response: '7E8056185060010'
+  expected_values:
+    TOYOTA_GEAR: 6
+    TOYOTA_GEAR_LOCKUP: 0
 - response: '7E8056185068018'
   expected_values:
     TOYOTA_GEAR: 6
