Updated command responses

--- a/tests/test_cases/2016/command_support.yaml
+++ b/tests/test_cases/2016/command_support.yaml
@@ -53,25 +53,25 @@ unsupported_commands_by_ecu:
   - '700.221638'
   - 700.221F2F
   701:
-  - 701.709.220103
-  - 701.709.221627
-  - 701.709.221628
+  - 701.709.220103:TOYOTA_ODO_V3
+  - 701.709.221627:TOYOTA_TF1_PAN
+  - 701.709.221628:TOYOTA_TF2_CONV
   745:
-  - 745.74D.221739
+  - 745.74D.221739:TOYOTA_HVBAT_SOC_DISPLAY
   747:
-  - 747.74F.220103
-  - 747.74F.22182E
+  - 747.74F.220103:TOYOTA_ODO_V2
+  - 747.74F.22182E:TOYOTA_HVBAT_CMU01_VOLT,TOYOTA_HVBAT_CMU02_VOLT
   750:
-  - '750.2115'
-  - '750.2116'
-  - 750.758.2130
+  - 750.2115:TOYOTA_TP_2_FL,TOYOTA_TP_2_FR,TOYOTA_TP_2_RL,TOYOTA_TP_2_RR,TOYOTA_TP_2_SPARE
+  - 750.2116:TOYOTA_TT_FL,TOYOTA_TT_FR,TOYOTA_TT_RL,TOYOTA_TT_RR,TOYOTA_TT_SPARE
+  - 750.758.2130:TOYOTA_TP_FL,TOYOTA_TP_FR,TOYOTA_TP_RL,TOYOTA_TP_RR,TOYOTA_TP_SPARE
   - 750.758.221004
   - 750.758.221005
-  - 750.758.222021
+  - 750.758.222021:TOYOTA_TID_1,TOYOTA_TID_2,TOYOTA_TID_3,TOYOTA_TID_4
   7B0:
   - 7B0.221006
   7B3:
-  - 7B3.221004
+  - 7B3.221004:TOYOTA_STEERING_ANGLE
   7C0:
   - 7C0.221021
   - 7C0.221022
@@ -79,7 +79,7 @@ unsupported_commands_by_ecu:
   7D0:
   - 7D0.2162
   7D2:
-  - 7D2.221F5B
+  - 7D2.221F5B:TOYOTA_HVBAT_SOC,TOYOTA_SOC
   - 7D2.7DA.22106C
   7E0:
   - 7E0.7E8.0100
