--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -56,19 +56,38 @@ supported_commands_by_ecu:
   - 0158:LGSO2FT2
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
 unsupported_commands_by_ecu:
+  6F1:
+  - 6F1.60D.22D240
+  - 6F1.612.224AB1
+  - 6F1.612.22586F
+  - 6F1.618.22DA12
+  - 6F1.618.22DA1F
+  - 6F1.618.22DA22
+  - 6F1.618.22DA23
+  - 6F1.618.22DA25
+  - 6F1.618.22DA28
+  - 6F1.618.22DA2A
+  - 6F1.618.22DA2E
+  - 6F1.618.22DA37
+  - 6F1.619.22DB32
+  - 6F1.619.22DFE7
+  - 6F1.629.22DBE4
+  - 6F1.640.221700
+  - 6F1.660.22D107
+  - 6F1.660.22D10D
   700:
-  - '700.221059'
-  - '700.221074'
+  - 700.221059:TOYOTA_ACCEL_PEDAL
+  - 700.221074:TOYOTA_ENG_OIL_PRESS
   - '700.221638'
-  - 700.221F2F
+  - 700.221F2F:TOYOTA_FLI
   701:
-  - 701.709.220103
-  - 701.709.221627
-  - 701.709.221628
+  - 701.709.220103:TOYOTA_ODO_V3
+  - 701.709.221627:TOYOTA_TF1_PAN
+  - 701.709.221628:TOYOTA_TF2_CONV
   745:
-  - 745.74D.221739
+  - 745.74D.221739:TOYOTA_HVBAT_SOC_DISPLAY
   747:
-  - 747.74F.220103
+  - 747.74F.220103:TOYOTA_ODO_V2
   - 747.74F.22182E
   750:
   - '750.2115'
@@ -80,18 +99,18 @@ unsupported_commands_by_ecu:
   7B0:
   - 7B0.221006
   7B1:
-  - 7B1.221026
+  - 7B1.221026:TOYOTA_COUPLING_TEMP
   7B3:
-  - 7B3.221004
+  - 7B3.221004:TOYOTA_STEERING_ANGLE
   7C0:
   - 7C0.221021
   - 7C0.221022
   - 7C0.7C8.2129
   7D0:
-  - 7D0.2162
+  - 7D0.2162:TOYOTA_PARKING_BRAKE
   7D2:
-  - 7D2.221F5B
+  - 7D2.221F5B:TOYOTA_HVBAT_SOC,TOYOTA_SOC
   - 7D2.7DA.22106C
-  - 7D2.7DA.221F0D
+  - 7D2.7DA.221F0D:TOYOTA_VSS
   7E0:
   - 7E0.7E8.2121
