--- a/tests/test_cases/2016/commands/7E0.7E8.2121.yaml
+++ b/tests/test_cases/2016/commands/7E0.7E8.2121.yaml
@@ -8,9 +8,9 @@ test_cases:
 - response: 7E807612100000000E0
   expected_values:
     TOYOTA_CC_S: 0
-- response: '7E80761210600008000'
+- response: 7E807612100000080E0
   expected_values:
     TOYOTA_CC_S: 0
-- response: '7E80761213900008000'
+- response: 7E80761213B00008000
   expected_values:
     TOYOTA_CC_S: 0
