--- a/tests/test_cases/2016/commands/7E0.7E8.2182.yaml
+++ b/tests/test_cases/2016/commands/7E0.7E8.2182.yaml
@@ -2,14 +2,18 @@ command_id: 7E0.7E8.2182
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E806618238403AC0
+  expected_values:
+    TOYOTA_ATF_PAN_T: 16.25
+    TOYOTA_ATF_TQC_T: 18.75
 - response: 7E80661823C003980
   expected_values:
     TOYOTA_ATF_PAN_T: 20
     TOYOTA_ATF_TQC_T: 17.5
-- response: 7E80661823DE03E80
+- response: 7E80661823DE03D40
   expected_values:
     TOYOTA_ATF_PAN_T: 21.875
-    TOYOTA_ATF_TQC_T: 22.5
+    TOYOTA_ATF_TQC_T: 21.25
 - response: 7E80661823E803C00
   expected_values:
     TOYOTA_ATF_PAN_T: 22.5
