--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -135,48 +135,67 @@ supported_commands_by_ecu:
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
 unsupported_commands_by_ecu:
+  6F1:
+  - 6F1.60D.22D240
+  - 6F1.612.224AB1
+  - 6F1.612.22586F
+  - 6F1.618.22DA12
+  - 6F1.618.22DA1F
+  - 6F1.618.22DA22
+  - 6F1.618.22DA23
+  - 6F1.618.22DA25
+  - 6F1.618.22DA28
+  - 6F1.618.22DA2A
+  - 6F1.618.22DA2E
+  - 6F1.618.22DA37
+  - 6F1.619.22DB32
+  - 6F1.619.22DFE7
+  - 6F1.629.22DBE4
+  - 6F1.640.221700
+  - 6F1.660.22D107
+  - 6F1.660.22D10D
   700:
   - '700.221638'
   701:
   - 701.709.221628
   745:
-  - 745.74D.221739
+  - 745.74D.221739:TOYOTA_HVBAT_SOC_DISPLAY
   747:
-  - 747.74F.220103
-  - 747.74F.22182E
+  - 747.74F.220103:TOYOTA_ODO_V2
+  - 747.74F.22182E:TOYOTA_HVBAT_CMU01_VOLT,TOYOTA_HVBAT_CMU02_VOLT
   750:
-  - '750.2115'
-  - '750.2116'
-  - 750.758.2130
-  - 750.758.221004
-  - 750.758.221005
-  - 750.758.222021
+  - 750.2115:TOYOTA_TP_2_FL,TOYOTA_TP_2_FR,TOYOTA_TP_2_RL,TOYOTA_TP_2_RR,TOYOTA_TP_2_SPARE
+  - 750.2116:TOYOTA_TT_FL,TOYOTA_TT_FR,TOYOTA_TT_RL,TOYOTA_TT_RR,TOYOTA_TT_SPARE
+  - 750.758.2130:TOYOTA_TP_FL,TOYOTA_TP_FR,TOYOTA_TP_RL,TOYOTA_TP_RR,TOYOTA_TP_SPARE
+  - 750.758.221004:TOYOTA_TT_1,TOYOTA_TT_2,TOYOTA_TT_3,TOYOTA_TT_4,TOYOTA_TT_FL_V2,TOYOTA_TT_FR_V2,TOYOTA_TT_RL_V2,TOYOTA_TT_RR_V2,TOYOTA_TT_SPARE_V2
+  - 750.758.221005:TOYOTA_TP_1,TOYOTA_TP_2,TOYOTA_TP_3,TOYOTA_TP_4,TOYOTA_TP_FL_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_SPARE_V2
+  - 750.758.222021:TOYOTA_TID_1,TOYOTA_TID_2,TOYOTA_TID_3,TOYOTA_TID_4
   7B0:
   - 7B0.221006
   - 7B0.7B8.2103
   - 7B0.7B8.2121
   - 7B0.7B8.2147
   7B1:
-  - 7B1.221026
+  - 7B1.221026:TOYOTA_COUPLING_TEMP
   7C0:
   - 7C0.7C8.2129
   7D0:
   - 7D0.2162
   7D2:
-  - 7D2.221F5B
-  - 7D2.7DA.22106C
-  - 7D2.7DA.221F0D
+  - 7D2.221F5B:TOYOTA_HVBAT_SOC,TOYOTA_SOC
+  - 7D2.7DA.22106C:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
+  - 7D2.7DA.221F0D:TOYOTA_VSS
   7E0:
   - 7E0.7E8.0105
   - 7E0.7E8.010C
   - 7E0.7E8.0131
   - 7E0.7E8.0142
   - 7E0.7E8.015C
-  - 7E0.7E8.2121
-  - 7E0.7E8.2128
-  - 7E0.7E8.2151
-  - 7E0.7E8.2182
-  - 7E0.7E8.2185
+  - 7E0.7E8.2121:TOYOTA_CC_S
+  - 7E0.7E8.2128:TOYOTA_ODO
+  - 7E0.7E8.2151:TOYOTA_EOT,TOYOTA_PREV_TRIP_DST,TOYOTA_VVTOT
+  - 7E0.7E8.2182:TOYOTA_ATF_PAN_T,TOYOTA_ATF_TQC_T
+  - 7E0.7E8.2185:TOYOTA_GEAR,TOYOTA_GEAR_LOCKUP
   7E1:
   - 7E1.7E9.0105
   - 7E1.7E9.010C
