Update command data for Toyota/Tundra

--- a/tests/test_cases/2016/command_support.yaml
+++ b/tests/test_cases/2016/command_support.yaml
@@ -109,6 +109,8 @@ unsupported_commands_by_ecu:
   - 7C0.221022|fc=1:TOYOTA_FLV
   - 7C0.7C8.2129:TOYOTA_FLI_VOL
   "7D2":
-  - 7D2.22106C|fc=1:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
-  - 7D2.221F0D|fc=1:TOYOTA_VSS_V2
+  - 7D2.22106C
+  - 7D2.221F0D
   - 7D2.221F5B|fc=1:TOYOTA_SOC
+  - 7D2.7DA.22106C|fc=1:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
+  - 7D2.7DA.221F0D|fc=1:TOYOTA_VSS_V2
