--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -34,12 +34,12 @@ supported_commands_by_ecu:
   - 7C0.221021:TOYOTA_BATTERY_VOLTAGE
   - 7C0.221022|fc=1:TOYOTA_FLV
   "7D2":
-  - 7D2.22106C|fc=1:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
-  - 7D2.221F0D|fc=1:TOYOTA_VSS_V2
+  - 7D2.22106C
+  - 7D2.221F0D
   - 7D2.221F5B|fc=1:TOYOTA_SOC
   - 7D2.7DA.220103|fc=1:TOYOTA_ODO_V2_V2
   - 7D2.7DA.221040:TOYOTA_TRANSAXLE_OIL_T
-  - 7D2.7DA.22106C
+  - 7D2.7DA.22106C|fc=1:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
   - 7D2.7DA.221075:TOYOTA_FL_WHEEL_VSS,TOYOTA_FR_WHEEL_VSS,TOYOTA_RL_WHEEL_VSS,TOYOTA_RR_WHEEL_VSS
   - 7D2.7DA.2210A1:TOYOTA_RPM,TOYOTA_TQ
   - 7D2.7DA.2210B2:TOYOTA_INVRT_COOLANT_T
@@ -47,7 +47,7 @@ supported_commands_by_ecu:
   - 7D2.7DA.2215F7:TOYOTA_12V_C
   - 7D2.7DA.2215F8:TOYOTA_12V_T
   - 7D2.7DA.221F05:TOYOTA_COOL_T
-  - 7D2.7DA.221F0D
+  - 7D2.7DA.221F0D|fc=1:TOYOTA_VSS_V2
   - 7D2.7DA.221F46:TOYOTA_AAT
   - 7D2.7DA.221F9A:TOYOTA_HVBAT_C,TOYOTA_HVBAT_V
   "7DF":
