--- a/tests/test_cases/2024/commands/7B3.221004.yaml
+++ b/tests/test_cases/2024/commands/7B3.221004.yaml
@@ -1,6 +1,9 @@
 command_id: 7B3.221004
 test_cases:
 - expected_values:
+    TOYOTA_STEERING_ANGLE: 410
+  response: '7BB 06 62 10 04 01 5B 09 '
+- expected_values:
     TOYOTA_STEERING_ANGLE: 0
   response: 7BB06621004000000
 - expected_values:
