Update command data for Toyota/Tundra

--- a/tests/test_cases/2008/command_support.yaml
+++ b/tests/test_cases/2008/command_support.yaml
@@ -48,6 +48,7 @@ supported_commands_by_ecu:
   - 014D:MIL_TIME
   - 014E:CLR_TIME
   - 0153:EVAP_VPA
+  - 7E0.011C:OBDSUP
   - 7E0.0131:CLR_DIST
   - 7E0.7E8.2121:TOYOTA_CC_S
   - 7E0.7E8.2128:TOYOTA_ODO
