--- a/tests/test_cases/2008/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2008/commands/7B0.7B8.2147.yaml
@@ -31,8 +31,14 @@ test_cases:
     TOYOTA_YAW_RATE: -21
   response: 7B8076147FB016B689F
 - expected_values:
+    TOYOTA_LAT_G: -0.04
+    TOYOTA_LNG_G: -0.04
+    TOYOTA_STEER_ANGLE: 153
+    TOYOTA_YAW_RATE: 0
+  response: 7B8076147FEFE8085FA
+- expected_values:
     TOYOTA_LAT_G: -0.02
     TOYOTA_LNG_G: 0
-    TOYOTA_STEER_ANGLE: -18
+    TOYOTA_STEER_ANGLE: -118.5
     TOYOTA_YAW_RATE: 0
-  response: 7B8076147FF00807F4C
+  response: 7B8076147FF00807B5F
