--- a/tests/test_cases/2023/commands/701.709.220103.yaml
+++ b/tests/test_cases/2023/commands/701.709.220103.yaml
@@ -1,16 +1,16 @@
-command_id: 747.220103|fc=1
+command_id: 701.709.220103
 test_cases:
 - expected_values:
-    TOYOTA_ODO_V6: 39076
+    TOYOTA_ODO_V5: 39076
   response: |-
     220103
     70907620103010098A4
 - expected_values:
-    TOYOTA_ODO_V6: 39062
+    TOYOTA_ODO_V5: 39062
   response: '7090762010301009896'
 - expected_values:
-    TOYOTA_ODO_V6: 39100
+    TOYOTA_ODO_V5: 39100
   response: 70907620103010098BC
 - expected_values:
-    TOYOTA_ODO_V6: 17035
+    TOYOTA_ODO_V5: 17035
   response: 709076201030200428B
