--- a/tests/test_cases/2025/commands/701.709.220103.yaml
+++ b/tests/test_cases/2025/commands/701.709.220103.yaml
@@ -1,14 +1,14 @@
-command_id: 747.220103|fc=1
+command_id: 701.709.220103
 test_cases:
 - expected_values:
-    TOYOTA_ODO_V6: 250
+    TOYOTA_ODO_V5: 250
   response: 70907620103020000FA
 - expected_values:
-    TOYOTA_ODO_V6: 255
+    TOYOTA_ODO_V5: 255
   response: 70907620103020000FF
 - expected_values:
-    TOYOTA_ODO_V6: 256
+    TOYOTA_ODO_V5: 256
   response: '7090762010302000100'
 - expected_values:
-    TOYOTA_ODO_V6: 10822
+    TOYOTA_ODO_V5: 10822
   response: 7090762010302002A46
