Update command data for Toyota/Tundra

--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -70,6 +70,7 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 013D:CATEMP21
   - 013E:CATEMP12
@@ -229,11 +230,13 @@ unsupported_commands_by_ecu:
   "7D0":
   - 7D0.2162:TOYOTA_PARKING_BRAKE
   "7D2":
+  - 7D2.7DA.22106C|fc=1:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
   - 7D2.7DA.2210A2:TOYOTA_RM_TQ,TOYOTA_RM_TQ_REQ
   - 7D2.7DA.2210A6:TOYOTA_M_INVRT_MAX_T,TOYOTA_RM_INVRT_COOL_T
   - 7D2.7DA.221609:TOYOTA_HVBAT_CHRG_V
   - 7D2.7DA.221829:TOYOTA_HVBAT_MAX_T
   - 7D2.7DA.22182A:TOYOTA_HVBAT_MIN_T
+  - 7D2.7DA.221F0D|fc=1:TOYOTA_VSS_V2
   - 7D2.7DA.221F49:TOYOTA_ACC_PEDAL_POS_1
   - 7D2.7DA.221F4A:TOYOTA_ACC_PEDAL_POS_2
   "7E0":
