--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -26,6 +26,7 @@ supported_commands_by_ecu:
   - 0112:AIR_STAT
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0115:O2S12,SHRTFT11
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -34,6 +35,7 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 013D:CATEMP21
   - 013E:CATEMP12
@@ -138,6 +140,7 @@ unsupported_commands_by_ecu:
   - 7D2.221F5B|fc=1:TOYOTA_SOC
   - 7D2.7DA.220103|fc=1:TOYOTA_ODO_V2_V2
   - 7D2.7DA.221040:TOYOTA_TRANSAXLE_OIL_T
+  - 7D2.7DA.22106C|fc=1:TOYOTA_HVBAT_SOC_MAX,TOYOTA_HVBAT_SOC_MIN
   - 7D2.7DA.221075:TOYOTA_FL_WHEEL_VSS,TOYOTA_FR_WHEEL_VSS,TOYOTA_RL_WHEEL_VSS,TOYOTA_RR_WHEEL_VSS
   - 7D2.7DA.2210A1:TOYOTA_RPM,TOYOTA_TQ
   - 7D2.7DA.2210A2:TOYOTA_RM_TQ,TOYOTA_RM_TQ_REQ
@@ -150,6 +153,7 @@ unsupported_commands_by_ecu:
   - 7D2.7DA.221829:TOYOTA_HVBAT_MAX_T
   - 7D2.7DA.22182A:TOYOTA_HVBAT_MIN_T
   - 7D2.7DA.221F05:TOYOTA_COOL_T
+  - 7D2.7DA.221F0D|fc=1:TOYOTA_VSS_V2
   - 7D2.7DA.221F46:TOYOTA_AAT
   - 7D2.7DA.221F49:TOYOTA_ACC_PEDAL_POS_1
   - 7D2.7DA.221F4A:TOYOTA_ACC_PEDAL_POS_2
