--- a/tests/test_cases/2018/commands/7E0.7E8.2128.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2128.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2128
 test_cases:
 - expected_values:
+    TOYOTA_ODO: 124913
+  response: 7E805612801E7F1
+- expected_values:
     TOYOTA_ODO: 277475
   response: |-
     7E8056128043BE3
