--- a/tests/test_cases/2018/commands/750.2130|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.2130|e=2A,ta=2A,fc=1.yaml
@@ -134,6 +134,34 @@ test_cases:
     7582A10076130B7B9BE
     7582A21FFFF00000000
 - expected_values:
+    TOYOTA_TP_FL: 2.67241
+    TOYOTA_TP_FL_V1: 2.67241
+    TOYOTA_TP_FR: 2.7069
+    TOYOTA_TP_FR_V1: 2.7069
+    TOYOTA_TP_RL: 2.7931
+    TOYOTA_TP_RL_V1: 2.7931
+    TOYOTA_TP_RR: 3.88
+    TOYOTA_TP_RR_V1: 3.8
+    TOYOTA_TP_SPARE: 3.88
+    TOYOTA_TP_SPARE_V1: 3.8
+  response: |-
+    7582A10076130B8BABF
+    7582A21FFFF00000000
+- expected_values:
+    TOYOTA_TP_FL: 2.67241
+    TOYOTA_TP_FL_V1: 2.67241
+    TOYOTA_TP_FR: 3.88
+    TOYOTA_TP_FR_V1: 3.8
+    TOYOTA_TP_RL: 3.88
+    TOYOTA_TP_RL_V1: 3.8
+    TOYOTA_TP_RR: 3.88
+    TOYOTA_TP_RR_V1: 3.8
+    TOYOTA_TP_SPARE: 3.88
+    TOYOTA_TP_SPARE_V1: 3.8
+  response: |-
+    7582A10076130B8FFFF
+    7582A21FFFF00000000
+- expected_values:
     TOYOTA_TP_FL: 3.88
     TOYOTA_TP_FL_V1: 3.8
     TOYOTA_TP_FR: 2.41379
