Update command data for Toyota/Tundra

--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -1,10 +1,10 @@
 model_year: 2023
 supported_commands_by_ecu:
   "700":
-  - 700.221059:TOYOTA_ACCEL_PEDAL
   - 700.221F2F:TOYOTA_FLI
   - 700.708.221017:TOYOTA_INJ_VOL
   - 700.708.22102A:TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1,TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1,TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1,TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1,TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1
+  - 700.708.221059:TOYOTA_ACCEL_PEDAL
   - 700.708.22105C:TOYOTA_KNOCK_CORRECT_LEARNED_VALUE,TOYOTA_KNOCK_FEEDBACK_VALUE
   - 700.708.22105E:TOYOTA_ECU_INTERNAL_T
   - 700.708.221062:TOYOTA_EXHAUST_VVT_OCV_CONTROL_DUTY
@@ -27,12 +27,12 @@ supported_commands_by_ecu:
   - 750.758.221005|e=2A,ta=2A,fc=1:TOYOTA_TP_1,TOYOTA_TP_2,TOYOTA_TP_3,TOYOTA_TP_4,TOYOTA_TP_5,TOYOTA_TP_FL_V2,TOYOTA_TP_FL_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_SPARE_V2,TOYOTA_TP_SPARE_V2
   - 750.758.222021|e=2A,ta=2A,fc=1:TOYOTA_TID_1,TOYOTA_TID_2,TOYOTA_TID_3,TOYOTA_TID_4
   "7B0":
-  - 7B0.221006:TOYOTA_MASTER_CYL_TEMP
+  - 7B0.7B8.221006:TOYOTA_MASTER_CYL_TEMP
   "7B3":
-  - 7B3.221004:TOYOTA_STEERING_ANGLE
+  - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE
   "7C0":
-  - 7C0.221021:TOYOTA_BATTERY_VOLTAGE
   - 7C0.221022|fc=1:TOYOTA_FLV
+  - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
   "7D2":
   - 7D2.22106C
   - 7D2.221F0D
@@ -202,10 +202,10 @@ unsupported_commands_by_ecu:
   - 6F1.22DBE4|e=29,fc=1:TOYOTA_FL_SPD,TOYOTA_FR_SPD,TOYOTA_RL_SPD,TOYOTA_RR_SPD
   - 6F1.22DFE7|e=19,fc=1:TOYOTA_OIL_CHANGE_DIST,TOYOTA_VGT_CAL_ANGLE
   "700":
-  - 700.221638:TOYOTA_ATF_TEMP
   - 700.708.221043:TOYOTA_EWP_RPM,TOYOTA_EWP_TARGET_VSS
   - 700.708.221078:TOYOTA_IDLE_SAC_CYL_1,TOYOTA_IDLE_SAC_CYL_2,TOYOTA_IDLE_SAC_CYL_3,TOYOTA_IDLE_SAC_CYL_4
   - 700.708.2210A7:TOYOTA_MIS_1,TOYOTA_MIS_2,TOYOTA_MIS_3,TOYOTA_MIS_4
+  - 700.708.221638:TOYOTA_ATF_TEMP
   - 700.708.222848:TOYOTA_EOP_CONTROL_VALVE
   "701":
   - 701.709.221628:TOYOTA_TF2_CONV
@@ -224,7 +224,7 @@ unsupported_commands_by_ecu:
   - 7B0.7B8.2121:TOYOTA_VSS,TOYOTA_VSS_V3
   - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEER_ANGLE,TOYOTA_YAW_RATE
   "7B1":
-  - 7B1.221026:TOYOTA_COUPLING_TEMP
+  - 7B1.7B9.221026:TOYOTA_COUPLING_TEMP
   "7C0":
   - 7C0.7C8.2129:TOYOTA_FLI_VOL
   "7D0":
