Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -9,6 +9,14 @@ test_cases:
     7082380008002000082
     70824486E6F414401A2
 - expected_values:
+    TOYOTA_EOT_V2: 13
+  response: |-
+    708102262107B000003
+    708214202009E7F5B82
+    70822F0809F80268063
+    708238000800900006E
+    7082435464633330000
+- expected_values:
     TOYOTA_EOT_V2: 30
   response: |-
     708102262107B000003
