--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -257,6 +257,14 @@ test_cases:
     708238000800900004E
     70824383C3C38380000
 - expected_values:
+    TOYOTA_EOT_V2: 13
+  response: |-
+    708102262107B004604
+    708213F0100007F5B85
+    708221B7F407E8B80CB
+    7082380008009000080
+    7082435335032330000
+- expected_values:
     TOYOTA_EOT_V2: 8
   response: |-
     708102262107B004804
