Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -249,6 +249,14 @@ test_cases:
     708238000800200007B
     708242C4B4B29290A13
 - expected_values:
+    TOYOTA_EOT_V2: 27
+  response: |-
+    708102262107B003204
+    708216A011ABA7ED681
+    708228080007ED68037
+    7082380008003000082
+    7082443787D502F0006
+- expected_values:
     TOYOTA_EOT_V2: 16
   response: |-
     708102262107B003E04
