--- a/tests/test_cases/2025/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2025/commands/700.708.22102A.yaml
@@ -19,6 +19,15 @@ test_cases:
     708100862102A808074
     7082189880000000000
 - expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 7.64706
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 3.72549
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 3.72549
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 1.76471
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 6.86275
+  response: |-
+    708100862102A898984
+    7082191930000000000
+- expected_values:
     TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 5.29412
     TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 6.86275
     TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 6.47059
