Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2024/commands/700.708.22102A.yaml
@@ -1,6 +1,13 @@
 command_id: 700.708.22102A
 test_cases:
 - expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 3.72549
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 4.90196
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 2.94118
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: 2.94118
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: -2.94118
+  response: "708 10 08 62 10 2A 8C 87 87 \n708 21 78 89 00 00 00 00 00 "
+- expected_values:
     TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: 4.11765
     TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 0.58824
     TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 0.58824
