--- a/tests/test_cases/2024/commands/700.708.22106F.yaml
+++ b/tests/test_cases/2024/commands/700.708.22106F.yaml
@@ -2,6 +2,9 @@ command_id: 700.708.22106F
 test_cases:
 - expected_values:
     TOYOTA_INTAKE_VVT_TARGET_ANGLE_B1: 0
+  response: '708 05 62 10 6F 00 00 '
+- expected_values:
+    TOYOTA_INTAKE_VVT_TARGET_ANGLE_B1: 0
   response: 7080562106F0000
 - expected_values:
     TOYOTA_INTAKE_VVT_TARGET_ANGLE_B1: 7.48918
