--- a/tests/test_cases/2024/commands/700.708.221071.yaml
+++ b/tests/test_cases/2024/commands/700.708.221071.yaml
@@ -2,6 +2,9 @@ command_id: 700.708.221071
 test_cases:
 - expected_values:
     TOYOTA_EXHAUST_VVT_TARGET_ANGLE_B1: 0
+  response: '708 05 62 10 71 00 00 '
+- expected_values:
+    TOYOTA_EXHAUST_VVT_TARGET_ANGLE_B1: 0
   response: '708056210710000'
 - expected_values:
     TOYOTA_EXHAUST_VVT_TARGET_ANGLE_B1: 2.48988
