--- a/tests/test_cases/2024/commands/700.708.2210AA.yaml
+++ b/tests/test_cases/2024/commands/700.708.2210AA.yaml
@@ -2,4 +2,7 @@ command_id: 700.708.2210AA
 test_cases:
 - expected_values:
     TOYOTA_MISFIRE_LOAD: 0
+  response: '708 04 62 10 AA 00 '
+- expected_values:
+    TOYOTA_MISFIRE_LOAD: 0
   response: 708046210AA00
