--- a/tests/test_cases/2024/commands/700.708.221F3C.yaml
+++ b/tests/test_cases/2024/commands/700.708.221F3C.yaml
@@ -1,6 +1,9 @@
 command_id: 700.708.221F3C
 test_cases:
 - expected_values:
+    TOYOTA_CAT_T_BANK_1_SENSOR_1: 488.2
+  response: '708 05 62 1F 3C 14 A2 '
+- expected_values:
     TOYOTA_CAT_T_BANK_1_SENSOR_1: 38.5
   response: 70805621F3C0311
 - expected_values:
