Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/7D2.7DA.221F9A.yaml
+++ b/tests/test_cases/2025/commands/7D2.7DA.221F9A.yaml
@@ -49,11 +49,60 @@ test_cases:
     7DA1009621F9A0E004D
     7DA2180FFF700000000
 - expected_values:
-    TOYOTA_HVBAT_C: -87.8
-    TOYOTA_HVBAT_V: 363
+    TOYOTA_HVBAT_C: -76.2
+    TOYOTA_HVBAT_V: 375
   response: |-
-    7DA1009621F9A0E005A
-    7DA21C0FC9200000000
+    7DA1009621F9A0E005D
+    7DA21C0FD0600000000
+- expected_values:
+    TOYOTA_HVBAT_C: 17
+    TOYOTA_HVBAT_V: 316
+  response: |-
+    7E8044131282F
+    7DA1009621F9A0E004F
+    7DA210000AA00000000
+- expected_values:
+    TOYOTA_HVBAT_C: 84.8
+    TOYOTA_HVBAT_V: 303
+  response: |-
+    7E80441312835
+    7DA1009621F9A0E004B
+    7DA21C0035000000000
+- expected_values:
+    TOYOTA_HVBAT_C: 3.9
+    TOYOTA_HVBAT_V: 332
+  response: |-
+    7E80441312835
+    7DA1009621F9A0E0053
+    7DA2100002700000000
+- expected_values:
+    TOYOTA_HVBAT_C: -16.2
+    TOYOTA_HVBAT_V: 333
+  response: |-
+    7E80441312836
+    7DA1009621F9A0E0053
+    7DA2140FF5E00000000
+- expected_values:
+    TOYOTA_HVBAT_C: 4.1
+    TOYOTA_HVBAT_V: 322
+  response: |-
+    7EA0441312864
+    7DA1009621F9A0E0050
+    7DA2180002900000000
+- expected_values:
+    TOYOTA_HVBAT_C: -3.5
+    TOYOTA_HVBAT_V: 307
+  response: |-
+    7EA044131286A
+    7DA1009621F9A0E004C
+    7DA21C0FFDD00000000
+- expected_values:
+    TOYOTA_HVBAT_C: 3.6
+    TOYOTA_HVBAT_V: 323
+  response: |-
+    7EA044131286A
+    7DA1009621F9A0E0050
+    7DA21C0002400000000
 - expected_values:
     TOYOTA_HVBAT_C: -17.3
     TOYOTA_HVBAT_V: 318
@@ -61,3 +110,24 @@ test_cases:
     7ED03410D0C
     7DA1009621F9A0E004F
     7DA2180FF5300000000
+- expected_values:
+    TOYOTA_HVBAT_C: -44
+    TOYOTA_HVBAT_V: 345
+  response: |-
+    7ED0441312799
+    7DA1009621F9A0E0056
+    7DA2140FE4800000000
+- expected_values:
+    TOYOTA_HVBAT_C: -41.7
+    TOYOTA_HVBAT_V: 342
+  response: |-
+    7EE04413128B4
+    7DA1009621F9A0E0055
+    7DA2180FE5F00000000
+- expected_values:
+    TOYOTA_HVBAT_C: 33.4
+    TOYOTA_HVBAT_V: 299
+  response: |-
+    7EE04413128BB
+    7DA1009621F9A0E004A
+    7DA21C0014E00000000
