Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -273,6 +273,14 @@ test_cases:
     708238000800A00004E
     7082431373430300004
 - expected_values:
+    TOYOTA_EOT_V2: 3
+  response: |-
+    708102262107B003204
+    70821B70101197F5585
+    7082268800B7F608153
+    7082380008007000075
+    708242B42422A2A0560
+- expected_values:
     TOYOTA_EOT_V2: 8
   response: |-
     708102262107B004804
