--- a/tests/test_cases/2025/commands/700.708.22105E.yaml
+++ b/tests/test_cases/2025/commands/700.708.22105E.yaml
@@ -1,8 +1,8 @@
 command_id: 700.708.22105E
 test_cases:
 - expected_values:
-    TOYOTA_ECU_INTERNAL_T: 8
-  response: '7080462105E30'
+    TOYOTA_ECU_INTERNAL_T: 6
+  response: 7080462105E2E
 - expected_values:
     TOYOTA_ECU_INTERNAL_T: 80
   response: '7080462105E78'
