Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -273,6 +273,14 @@ test_cases:
     708238000800A00004E
     7082431373430300004
 - expected_values:
+    TOYOTA_EOT_V2: 0
+  response: |-
+    708102262107B003404
+    70821230103EC7F1084
+    70822E2800A7F1A8173
+    7082380008000000083
+    7082428646428280F85
+- expected_values:
     TOYOTA_EOT_V2: 8
   response: |-
     708102262107B004804
