Update command data for Toyota/Tundra

--- a/tests/test_cases/2018/commands/750.758.2116|t=96,e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2116|t=96,e=2A,ta=2A,fc=1.yaml
@@ -67,15 +67,25 @@ test_cases:
     7582A10076116FFFFFF
     7582A2126FF00000000
 - expected_values:
-    TOYOTA_TT_FL_V2: 27
-    TOYOTA_TT_FR_V2: 27
-    TOYOTA_TT_RL_V2: 28
-    TOYOTA_TT_RR_V2: 27
+    TOYOTA_TT_FL_V2: 10
+    TOYOTA_TT_FR_V2: 11
+    TOYOTA_TT_RL_V2: 11
+    TOYOTA_TT_RR_V2: 11
     TOYOTA_TT_SPARE_V2: 215
   response: |-
-    758F110076116434344
+    758F110076116323333
     750F1300001
-    758F12143FF00000000
+    758F12133FF00000000
+- expected_values:
+    TOYOTA_TT_FL_V2: 16
+    TOYOTA_TT_FR_V2: 16
+    TOYOTA_TT_RL_V2: 17
+    TOYOTA_TT_RR_V2: 17
+    TOYOTA_TT_SPARE_V2: 215
+  response: |-
+    758F110076116383839
+    758F12139FF00000000
+    750F1300001
 - expected_values:
     TOYOTA_TT_FL_V2: 50
     TOYOTA_TT_FR_V2: 49
