--- a/tests/test_cases/2013/command_support.yaml
+++ b/tests/test_cases/2013/command_support.yaml
@@ -1,4 +1,4 @@
-model_year: 2020
+model_year: 2013
 supported_commands_by_ecu:
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -9,6 +9,7 @@ supported_commands_by_ecu:
   - 0107:LONGFT1
   - 0108:SHRTFT2,SHRTFT4
   - 0109:LONGFT2,LONGFT4
+  - 010B:MAP
   - 010C:RPM
   - 010D:VSS
   - 010E:SPARKADV
@@ -22,8 +23,8 @@ supported_commands_by_ecu:
   - 011F:RUNTM
   - 0121:MIL_DIST
   - 0124:LAMBDA11_VOLT,O2S11_VOLT
+  - 012C:EGR_PCT
   - 012E:EVAP_PCT
-  - 012F:FLI
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
@@ -45,17 +46,3 @@ supported_commands_by_ecu:
   - 014E:CLR_TIME
   - 0151:FUEL_TYP
   - 0153:EVAP_VPA
-  - 0155:STSO2FT1
-  - 0156:LGSO2FT1
-  - 0157:STSO2FT2
-  - 0158:LGSO2FT2
-  - 0162:TQ_ACT
-  - 0163:TQ_REF
-  - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
-  - 018E:TQ_FR
-  - 019D:FUEL_RATE_ALT,VFUEL_RATE
-  - 019E:EXH_RATE
-  - 01A6:ODO
-unsupported_commands_by_ecu:
-  "700":
-  - 700.221F2F:TOYOTA_FLI
