--- a/tests/test_cases/2008/command_support.yaml
+++ b/tests/test_cases/2008/command_support.yaml
@@ -4,6 +4,8 @@ supported_commands_by_ecu:
   - 7B0.2103:TOYOTA_TIRE_FL_SPD,TOYOTA_TIRE_FR_SPD,TOYOTA_TIRE_RL_SPD,TOYOTA_TIRE_RR_SPD
   - 7B0.7B8.2121:TOYOTA_VSS,TOYOTA_VSS_V3
   - 7B0.7B8.2147:TOYOTA_LAT_G,TOYOTA_LNG_G,TOYOTA_STEER_ANGLE,TOYOTA_YAW_RATE
+  "7C0":
+  - 7C0.7C8.2129:TOYOTA_FLI_VOL
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -137,11 +139,11 @@ unsupported_commands_by_ecu:
   - 7B3.7BB.221004:TOYOTA_STEERING_ANGLE
   "7C0":
   - 7C0.221022|fc=1:TOYOTA_FLV
-  - 7C0.7C8.2129:TOYOTA_FLI_VOL
   - 7C0.7C8.221021:TOYOTA_BATTERY_VOLTAGE
   "7D0":
   - 7D0.2162:TOYOTA_PARKING_BRAKE
   "7D2":
+  - 7D2.220103|fc=1:TOYOTA_ODO_V2_V2
   - 7D2.221040:TOYOTA_TRANSAXLE_OIL_T
   - 7D2.22106C
   - 7D2.221075:TOYOTA_FL_WHEEL_VSS,TOYOTA_FR_WHEEL_VSS,TOYOTA_RL_WHEEL_VSS,TOYOTA_RR_WHEEL_VSS
