--- a/tests/test_cases/2008/commands/7E0.0131.yaml
+++ b/tests/test_cases/2008/commands/7E0.0131.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.0131
 test_cases:
 - expected_values:
+    CLR_DIST: 0
+  response: '7E80441310000'
+- expected_values:
     CLR_DIST: 1155
   response: '7E80441310483'
