--- a/tests/test_cases/2008/commands/7E0.0131.yaml
+++ b/tests/test_cases/2008/commands/7E0.0131.yaml
@@ -4,5 +4,11 @@ test_cases:
     CLR_DIST: 0
   response: '7E80441310000'
 - expected_values:
+    CLR_DIST: 2
+  response: '7E80441310002'
+- expected_values:
+    CLR_DIST: 3
+  response: '7E80441310003'
+- expected_values:
     CLR_DIST: 1155
   response: '7E80441310483'
