Update command data for Toyota/Tundra

--- a/tests/test_cases/2008/commands/7E0.0131.yaml
+++ b/tests/test_cases/2008/commands/7E0.0131.yaml
@@ -10,5 +10,20 @@ test_cases:
     CLR_DIST: 3
   response: '7E80441310003'
 - expected_values:
+    CLR_DIST: 7
+  response: '7E80441310007'
+- expected_values:
+    CLR_DIST: 8
+  response: '7E80441310008'
+- expected_values:
+    CLR_DIST: 9
+  response: '7E80441310009'
+- expected_values:
+    CLR_DIST: 10
+  response: 7E8044131000A
+- expected_values:
+    CLR_DIST: 11
+  response: 7E8044131000B
+- expected_values:
     CLR_DIST: 1155
   response: '7E80441310483'
