Update command data for Toyota/Tundra

--- a/tests/test_cases/2008/commands/7B0.7B8.2147.yaml
+++ b/tests/test_cases/2008/commands/7B0.7B8.2147.yaml
@@ -6,6 +6,11 @@ test_cases:
     TOYOTA_YAW_RATE: -8
   response: 7B8066147007978AD
 - expected_values:
+    TOYOTA_LAT_G: 0.08
+    TOYOTA_LNG_G: -2.22
+    TOYOTA_YAW_RATE: 10
+  response: 7B806614704918A6E
+- expected_values:
     TOYOTA_LAT_G: 0.18
     TOYOTA_LNG_G: -2.2
     TOYOTA_YAW_RATE: 4
