--- a/tests/test_cases/2025/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2025/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -4,6 +4,8 @@ test_cases:
     TOYOTA_TT_FL_V3: -40
     TOYOTA_TT_FR_V3: -40
     TOYOTA_TT_RL_V3: -40
+    TOYOTA_TT_RR_V3: -40
+    TOYOTA_TT_SPARE_V3: -40
   response: |-
     7582A10086210040000
     7582A21000000000000
