Update command data for Toyota/Tundra

--- a/tests/test_cases/2017/command_support.yaml
+++ b/tests/test_cases/2017/command_support.yaml
@@ -24,6 +24,7 @@ supported_commands_by_ecu:
   - 0121:MIL_DIST
   - 0124:LAMBDA11_VOLT,O2S11_VOLT
   - 012E:EVAP_PCT
+  - 012F:FLI
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
@@ -44,5 +45,6 @@ supported_commands_by_ecu:
   - 014D:MIL_TIME
   - 014E:CLR_TIME
   - 0151:FUEL_TYP
+  - 0152:ALCH_PCT
   - 0153:EVAP_VPA
   - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
